--- a/Probablity.ipynb
+++ b/Probablity.ipynb
@@ -513,9 +513,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "723096f3",
+   "metadata": {},
+   "source": [
+    "https://www.khanacademy.org/math/ap-statistics/probability-ap/stats-conditional-probability/a/tree-diagrams-conditional-probability"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b23cc3ae",
+   "id": "e12d2816",
    "metadata": {},
    "outputs": [],
    "source": []
